--- a/source/sass/blocks/_before-after.scss
+++ b/source/sass/blocks/_before-after.scss
@@ -5,11 +5,22 @@
     @include reset;
     position: relative;
     min-height: 240px;
+    margin: 0 auto;
     margin-bottom: 36px;
+
+    @media (min-width: $tablet-width) {
+      width: 677px;
+    }
   }
 
   &__item {
     position: absolute;
+    width: 100%;
+  }
+
+  &__item img {
+    display: block;
+    margin: 0 auto;
   }
 
   &__controls {
@@ -17,6 +28,45 @@
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+
+    @media (min-width: $tablet-width) {
+      align-items: center;
+      width: 566px;
+    }
+  }
+
+  &__input {
+    @media (min-width: $tablet-width) {
+      position: relative;
+      width: 428px;
+      height: 6px;
+      background-color: #dbdbdb;
+      border-radius: 5px;
+    }
+  }
+
+  &__input-handle {
+    @media (min-width: $tablet-width) {
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translateY(-14px) translateX(-50%);
+      width: 34px;
+      height: 34px;
+      background-color: #ffffff;
+      border-radius: 50%;
+      border: 1px solid #cdcdcd;
+      display: flex;
+
+      &::before {
+        content: "";
+        width: 8px;
+        height: 8px;
+        margin: auto;
+        border-radius: 50%;
+        background-color: $accent-color;
+      }
+    }
   }
 
   &__button {
@@ -26,5 +76,12 @@
     font-size: 16px;
     background: none;
     border: none;
+
+    @media (min-width: $tablet-width) {
+      padding: 0;
+      padding-bottom: 4px;
+      font-size: 20px;
+      border-bottom: 1px dotted #cdcdcd;
+    }
   }
 }
