--- a/source/sass/blocks/_explanation.scss
+++ b/source/sass/blocks/_explanation.scss
@@ -2,17 +2,55 @@
   &__title {
     @include title-style;
     margin-bottom: 40px;
+
+    @media (min-width: $tablet-width) {
+      font-size: 60px;
+      margin-bottom: 75px;
+    }
   }
 
   &__list {
     @include reset;
+    counter-reset: number;
+
+    @media (min-width: $tablet-width) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
   }
 
   &__item {
     position: relative;
     display: block;
+    min-height: 60px;
     padding-left: 80px;
     margin-bottom: 20px;
+
+    @media (min-width: $tablet-width) {
+      width: 50%;
+      padding-top: 120px;
+      padding-left: 0;
+      padding-bottom: 95px;
+      padding-right: 100px;
+
+      &::after {
+        counter-increment: number;
+        content: counter(number);
+        position: absolute;
+        display: block;
+        width: 100%;
+        min-height: 280px;
+        top: 0;
+        left: 0;
+        font-family: $title-fontstack;
+        color: #f2f2f2;
+        font-size: 280px;
+        line-height: 210px;
+        text-align: center;
+        z-index: -1;
+      }
+    }
 
     &::before {
       content: "";
@@ -23,6 +61,22 @@
       width: 60px;
       height: 60px;
       background-color: $accent-color;
+
+      @media (min-width: $tablet-width) {
+        width: 80px;
+        height: 80px;
+      }
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 245px;
+      padding: 0;
+      padding-top: 110px;
+      min-height: 228px;
+
+      &::after {
+        text-align: right;
+      }
     }
   }
 }
