--- a/source/sass/blocks/_page-footer.scss
+++ b/source/sass/blocks/_page-footer.scss
@@ -1,6 +1,20 @@
 .page-footer {
   background-color: $gray-color;
 
+  @media (min-width: $desktop-width) {
+    position: relative;
+  }
+
+  &__address {
+    @media (min-width: $desktop-width) {
+      position: absolute;
+      top: 100px;
+      left: 80px;
+      width: 570px;
+      padding: 70px 75px;
+    }
+  }
+
   &__map {
     margin: 0 auto;
     text-align: center;
@@ -13,6 +27,10 @@
     margin: 0 auto;
     margin-top: 40px;
     margin-bottom: 31px;
+
+    @media (min-width: $tablet-width) {
+      margin: 0;
+    }
   }
 
   &__social {
@@ -23,6 +41,11 @@
     min-height: 64px;
     border-top: 1px solid #d9d9d9;
     border-bottom: 1px solid #d9d9d9;
+
+    @media (min-width: $tablet-width) {
+      border: none;
+      width: 260px;
+    }
   }
 
   &__developers-credits {
@@ -38,5 +61,13 @@
     line-height: 16px;
     color: $body-text-color;
     text-decoration: none;
+  }
+
+  & > .container {
+    @media (min-width: $tablet-width) {
+      justify-content: space-between;
+      display: flex;
+      align-items: center;
+    }
   }
 }
