--- a/source/sass/blocks/_variables.scss
+++ b/source/sass/blocks/_variables.scss
@@ -3,4 +3,8 @@ $body-text-color: #444444;
 $accent-color: #68b739;
 $gray-color: #f2f2f2;
 
+$phone-width: 320px;
+$tablet-width: 768px;
+$desktop-width: 1300px;
+
 $title-fontstack: "Oswald", "Arial", "Helvetica", sans-serif;
