--- a/source/sass/blocks/_button.scss
+++ b/source/sass/blocks/_button.scss
@@ -12,4 +12,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  &--big {
+    @media (min-width: $tablet-width) {
+      width: auto;
+      padding: 20px 25px;
+      font-size: 20px;
+      line-height: 20px;
+    }
+  }
 }
