--- a/source/sass/blocks/_container.scss
+++ b/source/sass/blocks/_container.scss
@@ -2,4 +2,14 @@
   margin: 0 auto;
   width: 320px;
   padding: 0 20px;
+
+  @media (min-width: $tablet-width) {
+    width: $tablet-width;
+    padding: 0 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: $desktop-width;
+    padding: 0 40px;
+  }
 }
