--- a/source/sass/blocks/_product.scss
+++ b/source/sass/blocks/_product.scss
@@ -3,8 +3,32 @@
   flex-wrap: wrap;
   justify-content: space-between;
 
+  @media (min-width: $tablet-width) {
+    position: relative;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px;
+    padding-top: 165px;
+    background-color: $gray-color;
+    margin: 0;
+    width: 100%;
+  }
+
+  &__image {
+    @media (min-width: $tablet-width) {
+      position: absolute;
+      bottom: 100%;
+      transform: translateY(90px);
+      height: 200px;
+    }
+  }
+
   &__info {
     width: 50%;
+
+    @media (min-width: $tablet-width) {
+      width: 100%;
+    }
   }
 
   &__title {
@@ -17,6 +41,16 @@
     padding-bottom: 10px;
     text-transform: uppercase;
     font-weight: normal;
+
+    @media (min-width: $tablet-width) {
+      margin: 0 auto;
+      width: 130px;
+      text-align: center;
+      padding: 0;
+      font-size: 20px;
+      line-height: 20px;
+      margin-bottom: 15px;
+    }
   }
 
   &__table {
@@ -24,6 +58,13 @@
     display: block;
     font-size: 12px;
     line-height: 16px;
+
+    @media (min-width: $tablet-width) {
+      width: 100%;
+      font-size: 16px;
+      line-height: 16px;
+      margin-bottom: 33px;
+    }
   }
 
   &__table tbody {
@@ -33,6 +74,11 @@
   &__data {
     display: flex;
     justify-content: space-between;
+
+    @media (min-width: $tablet-width) {
+      padding: 10px 0;
+      border-bottom: 1px solid #cdcdcd;
+    }
   }
 
   &__button {
