--- a/source/sass/blocks/_scaffolding.scss
+++ b/source/sass/blocks/_scaffolding.scss
@@ -32,6 +32,11 @@ body {
   line-height: 18px;
   font-family: "Arial", "Helvetica", sans-serif;
   color: $body-text-color;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
 
 img {
