--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,6 +8,7 @@
 @import "blocks/site-list";
 @import "blocks/promo";
 @import "blocks/button";
+@import "blocks/programs";
 @import "blocks/program";
 @import "blocks/explanation";
 @import "blocks/example";
